Revert "Merge pull request #190 in RUYI/jade from feature/jp-1982 to development"
This reverts commit b45607fbbbfb38fdbbb2abd02c5e98cca33ed1f8, reversing
changes made to e86261dc7557cdc264504fd9286f7b7316d60e2e.

--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj
@@ -203,7 +203,7 @@
       <AdditionalLibraryDirectories>..\..\externals\ZeroMQ\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mt|Win32'">
@@ -229,7 +229,7 @@
       <AdditionalLibraryDirectories>..\..\externals\ZeroMQ\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -267,7 +267,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mt|x64'">
@@ -306,7 +306,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -325,7 +325,7 @@
       <AdditionalLibraryDirectories>$(ProjectDir)..\..\externals\boost_1_64_0\stage\lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_mt|Win32'">
@@ -344,7 +344,7 @@
       <AdditionalLibraryDirectories>$(ProjectDir)..\..\externals\boost_1_64_0\stage\lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -376,7 +376,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -412,7 +412,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>postBuild.bat $(ProjectDir) $(OutDir)</Command>
+      <Command>$(SolutionDir)..\basic_tools\ruyi cppsdk --verbose --projectdir=$(ProjectDir) --outdir=$(OutDir)</Command>
     </PostBuildEvent>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
