[SDK] Move RuyiNet into Ruyi.SDK.Cloud namspace and its tests into Ruyi.SDK.Cloud.Tests

--- a/RuyiSDK/RuyiSDK.csproj
+++ b/RuyiSDK/RuyiSDK.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <Platforms>AnyCPU;x64</Platforms>
     <Configurations>Debug;Release;Internal_Release</Configurations>
+    <RootNamespace>Ruyi.SDK</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\RuyiSDK.xml</DocumentationFile>
