--- a/SDK.Base.nf2.0/SDK.Base.nf2.0.csproj
+++ b/SDK.Base.nf2.0/SDK.Base.nf2.0.csproj
@@ -50,6 +50,9 @@
     <Compile Include="..\SDK.Base\PubsubUtil.cs">
       <Link>PubsubUtil.cs</Link>
     </Compile>
+    <Compile Include="..\SDK.Base\SDKUtility.cs">
+      <Link>SDKUtility.cs</Link>
+    </Compile>
     <Compile Include="..\SDK.Base\ServiceIDs.cs">
       <Link>ServiceIDs.cs</Link>
     </Compile>
